@startuml

title __APP's Class Diagram__\n

  package com.example.barbershop {
    class BackGround {
    }
  }
  

  package com.example.barbershop {
    class BookTime {
    }
  }
  

  package com.example.barbershop {
    class BookingTimeController {
    }
  }
  

  package com.example.barbershop {
    class Bookings {
    }
  }
  

  package com.example.barbershop {
    class BuildConfig {
    }
  }
  

  package com.example.barbershop {
    class CalenderBooking {
    }
  }
  

  package com.example.barbershop {
    class Controller {
    }
  }
  

  package com.example.barbershop {
    class ExampleInstrumentedTest {
    }
  }
  

  package com.example.barbershop {
    class FirebaseController {
    }
  }
  

  package com.example.barbershop {
    class MainActivity {
    }
  }
  

  package com.example.barbershop {
    class MainMenu {
    }
  }
  

  package com.example.barbershop {
    class SearchBarberShop {
    }
  }
  

  package com.example.barbershop {
    class Settings {
    }
  }
  

  package com.example.barbershop {
    class SignupActivity {
    }
  }
  

  package com.example.barbershop {
    class TailoredOnCompleteListener {
    }
  }
  

  package com.example.barbershop {
    class User {
    }
  }
  

  package com.example.barbershop {
    class main_menu {
    }
  }
  

  BookingTimeController o-- BookTime : timeBooked
  Bookings -up-|> AppCompatActivity
  CalenderBooking -up-|> AppCompatActivity
  CalenderBooking o-- BookingTimeController : bookingTimeController
  Controller o-- User : users
  FirebaseController o-- User : CurrentUser
  MainActivity -up-|> AppCompatActivity
  MainActivity o-- Controller : controller
  MainMenu -up-|> View
  SearchBarberShop -up-|> AppCompatActivity
  Settings -up-|> AppCompatActivity
  SignupActivity -up-|> AppCompatActivity
  SignupActivity o-- Controller : controller
  TailoredOnCompleteListener -up-|> OnCompleteListener
  User -up-|> Serializable
  User o-- UserType : userType
  main_menu -up-|> AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
